{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 40,
  "lineage": "8872857d-5377-0723-be56-31c1b507a30a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:237435241572:internet-gateway/igw-004063150149b5a6d",
            "id": "igw-004063150149b5a6d",
            "owner_id": "237435241572",
            "tags": {
              "Name": "jwsystem-igw"
            },
            "tags_all": {
              "Name": "jwsystem-igw"
            },
            "vpc_id": "vpc-029de5c1973c1b7ba"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:237435241572:route-table/rtb-0c6867f9a0ea7c674",
            "id": "rtb-0c6867f9a0ea7c674",
            "owner_id": "237435241572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004063150149b5a6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jwsystem-rtb"
            },
            "tags_all": {
              "Name": "jwsystem-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-029de5c1973c1b7ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f08dc0adf3ca1eee",
            "route_table_id": "rtb-0c6867f9a0ea7c674",
            "subnet_id": "subnet-01363c45fdf3277e9"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098f451507e427f1c",
            "route_table_id": "rtb-0c6867f9a0ea7c674",
            "subnet_id": "subnet-0b8a1324eb6243454"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:237435241572:security-group/sg-09b2a06208d0938ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b2a06208d0938ed",
            "ingress": [],
            "name": "terraform-20220521155951164000000001",
            "name_prefix": "terraform-",
            "owner_id": "237435241572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jwsystem-sg"
            },
            "tags_all": {
              "Name": "jwsystem-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029de5c1973c1b7ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:237435241572:subnet/subnet-01363c45fdf3277e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01363c45fdf3277e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "237435241572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jwsystem-subnet-0"
            },
            "tags_all": {
              "Name": "jwsystem-subnet-0"
            },
            "vpc_id": "vpc-029de5c1973c1b7ba"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:237435241572:subnet/subnet-0b8a1324eb6243454",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8a1324eb6243454",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "237435241572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jwsystem-subnet-1"
            },
            "tags_all": {
              "Name": "jwsystem-subnet-1"
            },
            "vpc_id": "vpc-029de5c1973c1b7ba"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:237435241572:vpc/vpc-029de5c1973c1b7ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074ef4a5ec67d72d7",
            "default_route_table_id": "rtb-0b9e1487f376d2589",
            "default_security_group_id": "sg-025d7298eebe031d1",
            "dhcp_options_id": "dopt-4dcb8e2a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-029de5c1973c1b7ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9e1487f376d2589",
            "owner_id": "237435241572",
            "tags": {
              "Name": "jwsystem-vpc"
            },
            "tags_all": {
              "Name": "jwsystem-vpc"
            }
          }
        }
      ]
    }
  ]
}